--- a/produtos.css
+++ b/produtos.css
@@ -28,6 +28,10 @@ nav a {
   text-decoration: none;
 }
 
+nav a:hover {
+  color: darkolivegreen;
+}
+
 .produtos {
   width: 940px;
   margin: 0 auto;
@@ -39,4 +43,48 @@ nav a {
   text-align: center;
   width: 30%;
   vertical-align: top;
+  margin: 0 1.5%;
+  padding: 30px 20px;
+  box-sizing: border-box;
+  border: 2px solid #000000;
+  border-radius: 10px;
+}
+
+.produtos li:hover {
+  border-color: darkolivegreen;
+}
+
+.produtos li:active {
+  border-color: darkgreen;
+}
+
+.produtos li:hover h2 {
+  font-size: 34px;
+}
+
+.produtos h2 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.produto-descricao {
+  font-size: 18px;
+}
+
+.produto-preco {
+  font-size: 22px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+footer {
+  text-align: center;
+  background: url(bg.jpg);
+  padding: 40px 0;
+}
+
+.Copyright {
+  color: white;
+  font-size: 13px;
+  margin-top: 20px;
 }
