--- a/style.css
+++ b/style.css
@@ -1,5 +1,42 @@
+* {
+  margin: 0;
+}
+
+header {
+  background: #bbbbbb;
+  padding: 20px 0;
+}
+
+.caixa {
+  position: relative;
+  width: 940px;
+  margin: 0 auto;
+}
+
+nav {
+  position: absolute;
+  top: 110px;
+  right: 0;
+}
+
+nav li {
+  display: inline;
+  margin: 0 0 0 15px;
+}
+
+nav a {
+  text-transform: uppercase;
+  color: black;
+  font-weight: bold;
+  font-size: 22px;
+  text-decoration: none;
+}
+
 #banner {
   width: 100%;
+  box-sizing: border-box;
+  border: 2px solid #000000;
+  border-radius: 10px;
 }
 
 .principal {
@@ -8,11 +45,13 @@
 }
 
 .titulo-principal {
-  padding-left: 20px;
+  padding: 20px;
+  text-align: center;
 }
 
 .titulo-centralizado {
   text-align: center;
+  padding: 16px;
 }
 
 p {
@@ -30,6 +69,8 @@ em strong {
 
 .itens {
   font-style: italic;
+  font-weight: bold;
+  font-size: large;
 }
 
 .beneficios {
@@ -37,7 +78,7 @@ em strong {
   padding: 20px;
 }
 
-ul {
+.lista-principal {
   display: inline-block;
   vertical-align: top;
   width: 20%;
@@ -45,5 +86,17 @@ ul {
 }
 
 .imagembeneficios {
-  width: 50%;
+  width: 40%;
+}
+
+footer {
+  text-align: center;
+  background: url(bg.jpg);
+  padding: 40px 0;
+}
+
+.Copyright {
+  color: white;
+  font-size: 13px;
+  margin-top: 20px;
 }
