--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-* {
-  margin: 0;
+body {
+  font-family: 'Montserrat', sans-serif;
 }
 
 header {
@@ -32,35 +32,49 @@ nav a {
   text-decoration: none;
 }
 
-#banner {
+.banner {
   width: 100%;
-  box-sizing: border-box;
-  border: 2px solid #000000;
-  border-radius: 10px;
 }
 
 .principal {
-  background-color: darkgrey;
+  margin: 0 0 1em;
   padding: 30px;
 }
 
-.titulo-principal {
-  padding: 20px;
-  text-align: center;
+.principal strong {
+  font-weight: bold;
 }
 
-.titulo-centralizado {
+.principal em {
+  font-style: italic;
+}
+
+.titulo-principal {
   text-align: center;
+  font-size: 2em;
+  margin: 0 0 1em;
   padding: 16px;
+  clear: left;
+}
+
+.utensilios {
+  width: 120px;
+  float: left;
+  margin: 0 20px 20px 0;
+}
+
+.mapa {
+  padding: 3em 0;
+  margin: 0 3em 0 3em;
+}
+
+.mapa p {
+  margin: 0 0 2em;
 }
 
 p {
   text-align: center;
   font-size: 18px;
-}
-
-#missao {
-  font-size: 20px;
 }
 
 em strong {
@@ -86,12 +100,12 @@ em strong {
 }
 
 .imagembeneficios {
-  width: 40%;
+  width: 60%;
 }
 
 footer {
   text-align: center;
-  background: url(bg.jpg);
+  background: url(img/bg.jpg);
   padding: 40px 0;
 }
 
